--- a/sudoku.html
+++ b/sudoku.html
@@ -45,7 +45,7 @@ $(document).ready(function(){
       <li><a href="#top" title="Home">&#9820</a></li> 
       <li><a href="index.html" title="Chess Books">Chess Books</a></li>
       <li><a href="#sudbooks" title="Sudoku Books">Sudoku Books</a></li>
-      <li><a href="#about" title="About">About</a></li>
+      <li><a href="about.html" title="About">About</a></li>
       <li><a href="#contact" title="Contact">Contact</a></li>
       <li><a href="blog/index.php" title="Blog">Blog</a></li>
     </ul>
