--- a/sudoku.html
+++ b/sudoku.html
@@ -47,6 +47,7 @@ $(document).ready(function(){
       <li><a href="#sudbooks" title="Sudoku Books">Sudoku Books</a></li>
       <li><a href="about.html" title="About">About</a></li>
       <li><a href="#contact" title="Contact">Contact</a></li>
+      <li><a href="http://eepurl.com/hwNVqv" title="Newsletter">Newsletter</a></li>
       <li><a href="blog/index.php" title="Blog">Blog</a></li>
     </ul>
   </nav>
