--- a/sudoku.html
+++ b/sudoku.html
@@ -12,7 +12,7 @@
 </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Cicero Chess</title>
+  <title>Cicero Chess - Sudoku</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,700" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
