removed blog & changed email

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@ $(document).ready(function(){
       <li><a href="sudoku.html" title="Sudoku Books">Sudoku Books</a></li>
       <li><a href="about.html" title="About">About</a></li>
       <li><a href="#contact" title="Contact">Contact</a></li>
-      <li><a href="blog/index.php" title="Blog">Blog</a></li>
     </ul>
   </nav>
 </div>
@@ -84,7 +83,7 @@ $(document).ready(function(){
   
   </div>
    <div class="flex cntct" id="contact">
- <p>Email : sam@cicerochess.com
+ <p>Email : sam.cicero.chess [at] outlook dot com
 </br></br> Copyright &#169; 2022 Cicero Chess
 </p>
   </div>
